# payment-portal

./: .env  .gitignore  README.md  file_structure.txt  pyproject.toml  requirements.txt  requirements_backup.txt
.virtual_documents/notebooks/paysim/: 02_xgboost_model.ipynb
models/paysim/: config.json
notebooks/credit_card/: credit_card_fraud_detection.ipynb
notebooks/paysim/: 01_eda.ipynb  02_xgboost_model.ipynb
src/api/: app.py  schemas.py
src/api/routes/: accounts.py  auth.py  merchants.py  payments.py  pin.py  users.py
src/api/routes/bank/: customers.py
src/auth/: jwt.py  verify_api_key.py  verify_payment_pin.py  verify_user.py
src/data/: preprocess.py
src/databases/: crud.py  database.py  models.py
src/schemas/: auth.py  customer.py  merchant.py  payment.py  pin.py  user.py
src/security/: card_network.py  lunh.py  password.py  rate_limitter.py
src/services/: payment_service.py
src/services/fraud/: predictor.py
