[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
]
